--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-     <title>Lυᴄкуxԃ</title>
+     <title>SPC OWNER</title>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -1894,7 +1894,7 @@ var pJS = function (e, a) {
                     <a class="active" href="#" target="_blank">Github</a>
                     <a class="active" href="#" target="_blank">Instagram</a>
                     <a class="active" href="#" target="_blank">YouTube</a>
-                    <a class="active" href="https://telegram.dog/Lvxky" target="_blank">Telegram</a>
+                    <a class="active" href="https://t.me/spc_owners" target="_blank">Telegram</a>
                </div>
                <div class="header" onclick="toggle()">
                     <label for="check" class="checkbtn" id="chkbtn">
@@ -1902,7 +1902,7 @@ var pJS = function (e, a) {
                               <div class="center"></div>
                          </div>
                     </label>
-                    <a href="mailto:#" class="mail">
+                    <a href="mailto:fskquadrillinaire@gmail.com" class="mail">
                          <i class="fa-regular fa-envelope"></i>
                     </a>
                     <div class="main">
@@ -1912,7 +1912,7 @@ var pJS = function (e, a) {
                               </div>
                          </div>
                          <h3 class="name"></h3>
-                         <h3 class="sub-name">• 𝗟𝗨𝗖𝗞𝗬 𝗫𝗗 •</h3>
+                         <h3 class="sub-name">ꜱᴘᴄ_ᴏᴡɴᴇʀꜱ</h3>
                     </div>
                </div>
 
@@ -1922,19 +1922,17 @@ var pJS = function (e, a) {
                               <h3 class="title">About</h3>
                               <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: IDK ✦</p>
                               <p class="text">~ Dᴇᴠ ~</p>
-                              <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
+                              <p class="text">• Hacker | Editor | Hᴛᴍʟ | Gamer •</p>
                          </div>
                          <div class="icons-container">
-                              <a href="#" class="icon">
-                                   <i class="fa-brands fa-github"></i>
-                              </a>
-                              <a href="#" class="icon">
+                              
+                              <a href="https://instagram.com/spc_editzs7" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
-                              <a href="https://telegram.dog/Lvxky" class="icon">
+                              <a href="https://t.me/spc_owners" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
-                              <a href="#" class="icon">
+                              <a href="https://youtube.com/@spc_quadrill" class="icon">
                                    <i class="fa-brands fa-youtube"></i>
                               </a>
                          </div>
@@ -1943,7 +1941,7 @@ var pJS = function (e, a) {
                                    <a href="#" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog/Lvxky" class="share">Contact</a>
+                                   <a href="https://t.me/spc_owners" class="share">Contact</a>
                               </div>
                          </div>
                     </div>
